gitops/stage01-model-serving/serving/network-policy/allow-model-registry.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-private-ai-demo
  namespace: rhoai-model-registries
  labels:
    app.kubernetes.io/name: allow-from-private-ai-demo
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: model-registry
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  podSelector:
    matchLabels:
      app: model-catalog
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: private-ai-demo
    ports:
    - protocol: TCP
      port: 8443
